# shoot-em-up

./: .clang-format  .gitignore  CMakeLists.txt  copy_media.cmake
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake
include/: Aircraft.hpp  Category.hpp  Command.hpp  CommandQueue.hpp  Entity.hpp  Game.hpp  ResourceHolder.hpp  ResourceHolder.inl  ResourceIdentifiers.hpp  SceneNode.hpp  SpriteNode.hpp  TextureHolder.hpp  World.hpp
src/: Aircraft.cpp  Command.cpp  CommandQueue.cpp  Entity.cpp  Game.cpp  SceneNode.cpp  SpriteNode.cpp  TextureHolder.cpp  World.cpp  main.cpp
